--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,10 @@ node_modules/
 
 # Task files
 tasks.json
-tasks/ 
+tasks/
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
